--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -22,11 +22,9 @@
 }
 .options{
     height: 20px;
-    background-color: yellow;
     position: absolute;
     right: 20px;
     top: 3px;
-    width: 100px;
 }
 .card{
     height: 200px;
@@ -94,5 +92,15 @@
     height: 100%;
     display: flex;
     align-items: center;
+    cursor: pointer;
+}
+.options div{
+    display: inline-block;
+    color: white;
+    background-color: #4A4A4A;
+    padding: 7px;
+    border-radius: 10px;
+}
+.options div i{
     cursor: pointer;
 }
