--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .main-content{
     height: calc(100vh - 100px);
